# trimshare

./: .flake8  .gitignore  CHANGELOG.rst  README.rst  pyproject.toml
tests/: test_infer_out_video_name.py
trimshare/: __init__.py  trimshare.py
